# DistillFSS

./: .gitignore  README.md  app.py  datapp.py  demo.py  distill.py  edit.py  env.txt  explain.py  index.html  input.bib  isic.csv  main.py  output.bib  pyproject.toml  refine.py  result.ipynb  speed.py  test.py  test_dcama.py  train.py  train_dcama.py  variance.py  variance.yaml
checkpoints/: bam  hdmnet
dcama/: test.sh  train.sh
dcama/common/: config.py  logger.py
dcama/data/: dataset.py  pascal.py
distillfss/: substitution.py  test.py
distillfss/data/: __init__.py  coco.py  coco20i.py  coco_crop.py  dataset.py  deepglobe.py  deepglobe_preprocess.py  evican.py  industrial.py  isic.py  kvasir.py  lab2wild.py  lung.py  nucleus.py  pascal.py  pascal5i.py  phenobench.py  pothole.py  transforms.py  utils.py  weedmap.py
distillfss/models/: __init__.py  dummy.py  image_encoder.py  loss.py
ffss/: substitution.py
fssweed/: substitution.py  test.py
notebooks/: area_focus.ipynb  coco.ipynb  phenobench.ipynb  streamlit.ipynb  weedmap.ipynb  weedmap_distill.ipynb  weedmap_dmt.ipynb  weedmap_interpret.ipynb  weedmap_weedcama.ipynb
parameters_test/: Ablation.yaml  ISIC.yaml  ISIC_dist.yaml  Industrial.yaml  KVASIR.yaml  LungCancer.yaml  Nucleus.yaml  Pothole.yaml  WeedMap.yaml  dcama.yaml  dcama_distillation.yaml  dmtnet.yaml  phenobench.yaml  phenobench_samples.yaml  phenobench_weedcama.yaml  script.sh  speed.yaml
scripts/: download_baselines.sh  download_dcama.sh  test.sh  train.sh
slurm/: launch_run  launch_run_exe  launch_speed  launch_speed_exe  sync.py
(+210 files in other folders)
