[project]
name = "fssweedmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easydict>=1.13",
    "einops>=0.8.1",
    "lovely-tensors>=0.1.20",
    "matplotlib>=3.10.7",
    "mmcv>=2.2.0",
    "opencv-python>=4.12.0.88",
    "optuna>=4.6.0",
    "phenobench>=0.1.0",
    "plotly>=6.5.0",
    "pycocotools>=2.0.10",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
